
 zenTrack is a top quality, simple, and elegant
 tracking system for small to medium-large companies.
 Clean, simple interface, fully adaptable administration,
 object oriented and database abstracted design lend to 
 endless possibilities for project expansion.

----- V2.4.1 (Development, See CVS) ----

2003-05-03, Rob Hillis
  Clarified setting description in database and updated version number.
    - zentrack/install/UPGRADE_SEED_mssqlserver.sql 1.2
    - zentrack/install/UPGRADE_SEED_mysql.sql 1.10
    - zentrack/install/UPGRADE_SEED_oracle.sql 1.9
    - zentrack/install/UPGRADE_SEED_postgres.sql 1.9
    - zentrack/install/seed_mssqlserver.sql 1.8, 1.9
    - zentrack/install/seed_mysql.sql 1.18, 1.19
    - zentrack/install/seed_oracle.sql 1.19, 1.20
    - zentrack/install/seed_postgres.sql 1.14, 1.15
    - 
2003-05-02, Kato
  Updated language files (minor cleanup)
    - zentrack/includes/templates/languageForm.php 1.2
    - zentrack/includes/translations/french.trans 1.3
    - zentrack/includes/translations/spanish.trans 1.3

2003-05-01, Kato
  Fixed issues with creating tickets via email (loss of spaces and returns)
  Enhanced the email template parsing functions
  Improved email error messages, fixed 'egate user not found' bug
    - zentrack/includes/egate_utils.php 1.30
    - zentrack/includes/zenTrack.class 1.97
  Added highlighting for various priorities
    - zentrack/includes/templates/ticket_detailsBox.php 1.8
  Added postgres fix for return codes
    - zentrack/includes/db.class 1.23
  Improved gd_info messages
    - zentrack/includes/footer.php 1.20
  Removed notices for english (strings should be blank)
    - zentrack/includes/translator.class 1.6

2003-04-30, Kato
  Resolved issue with not being able to access tr() while
  using the egate_utils, causing an error
    - zentrack/includes/egate_utils.php 1.28
    - zentrack/includes/headerInc.php 1.29
    - zentrack/includes/zenTrack.class 1.96

2003-04-27, Rob Hillis