@@ -7,6 +7,17 @@
 
 ----- V2.4.1 (Development, See CVS) ----
 
+2003-05-06, Rob Hillis
+  Correct "attachment_types_allowed" description to accurately reflect usage.
+    - zentrack/install/UPGRADE_SEED_mssqlserver.sql 1.3
+    - zentrack/install/UPGRADE_SEED_mysql.sql 1.11
+    - zentrack/install/UPGRADE_SEED_oracle.sql 1.10
+    - zentrack/install/UPGRADE_SEED_postgres.sql 1.10
+    - zentrack/install/seed_mssqlserver.sql 1.10
+    - zentrack/install/seed_mysql.sql 1.20
+    - zentrack/install/seed_oracle.sql 1.21
+    - zentrack/install/seed_postgres.sql 1.16
+
 2003-05-03, Rob Hillis
   Clarified setting description in database and updated version number.
     - zentrack/install/UPGRADE_SEED_mssqlserver.sql 1.2
@@ -17,7 +28,7 @@
     - zentrack/install/seed_mysql.sql 1.18, 1.19
     - zentrack/install/seed_oracle.sql 1.19, 1.20
     - zentrack/install/seed_postgres.sql 1.14, 1.15
-    - 
+
 2003-05-02, Kato
   Updated language files (minor cleanup)
     - zentrack/includes/templates/languageForm.php 1.2
